update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Roman-politics_68064
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 68064-h/images/cover.jpg
 creator:
   author:
     agent_name: Abbott, Frank Frost
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/4938
     wikipedia: https://en.wikipedia.org/wiki/Frank_Frost_Abbott
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68064#Roman-politics
 gutenberg_issued: '2022-05-13'
 identifiers:
   gutenberg: '68064'
